# CHK-icoh01

./: mise.toml  pyproject.toml  requirements.txt
lib/: entry_point_mapping.py  send_command_to_server.py
lib/solutions/CHK/: checkout_solution.py
lib/solutions/HLO/: hello_solution.py
lib/solutions/SUM/: sum_solution.py
test/solution_tests/CHK/: test_checkout_r1.py  test_checkout_r2.py  test_checkout_r3.py  test_checkout_r5.py
test/solution_tests/CHK/R1/: test_checkout.py
test/solution_tests/CHK/R2/: test_checkout.py
test/solution_tests/HLO/: test_hello.py
test/solution_tests/SUM/: test_sum_solution.py
test/solution_tests/TST/: test_one.py
