[project]
name = "accelerate-runner"
version = "0.1.0"
description = ""
authors = [
    {name = "MattBarkway", email = "contact@mattbarkway.dev"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "tdl-client-python==0.30.1",
    "structlog (>=25.4.0,<26.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
pytest = "^8.2.2"
pytest-cov = "^6.0.0"
mypy = "^1.17.1"
coverage = "^7.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
